--- a/static/loading-bar.less
+++ b/static/loading-bar.less
@@ -3,7 +3,7 @@
 	top:0;
 	left:0;
 	width: 100%;
-	z-index: 100;
+	z-index: @z-index-big;
 }
 
 .meter > span {
@@ -32,7 +32,7 @@
 		transparent 75%, 
 		transparent
 	);
-	z-index: 1;
+	z-index: @z-index-1;
 	background-size: 50px 50px;
 	animation: move 2s linear infinite;
 	border-top-right-radius: 8px;
