--- a/static/variables.less
+++ b/static/variables.less
@@ -27,3 +27,9 @@
 
 /*----- OTHER -----*/
 @backdrop-blur: saturate(180%) blur(20px);
+
+/*----- Z-INDEX -----*/
+@z-index-1: 1;
+@z-index-minus-1: -1;
+@z-index-big; 99;
+@z-index-really-big: 999999;
